before moving identity

--- a/SelectionCommittee.Web/Views/Account/Register.cshtml
+++ b/SelectionCommittee.Web/Views/Account/Register.cshtml
@@ -11,29 +11,74 @@
     <h4>Create a new account.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+    <div class="row">
+        <!-- Email, Password -->
+        <div class="col-md-6">
+            <!-- Email -->
+            <div class="form-group">
+                @Html.LabelFor(m => m.Email, new { @class = "col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                </div>
+            </div>
+            <!-- Password -->
+            <div class="form-group">
+                @Html.LabelFor(m => m.Password, new { @class = "col-md-2" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                </div>
+            </div>
+            <!-- Confirm Password -->
+            <div class="form-group">
+                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        <!-- Full Name -->
+        <div class="col-md-6">
+            <!-- First Name -->
+            <div class="form-group">
+                <div class="col-md-10">
+                    <label class="">First Name</label>
+                </div>
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                </div>
+            </div>
+            <!-- Middle Name -->
+            <div class="form-group">
+                <div class="col-md-10">
+                    <label class="">Middle Name</label>
+                </div>
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                </div>
+            </div>
+            <!-- Last Name -->
+            <div class="form-group">
+                <div class="col-md-10">
+                    <label class="">Last Name</label>
+                </div>
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" class="btn bg-secondary" value="Register" />
+                </div>
+            </div>
         </div>
+        <div class="col-md-4"></div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
+
+
+
 }
 
 @section Scripts {
