--- a/SelectionCommittee.Web/Views/Shared/_Layout.cshtml
+++ b/SelectionCommittee.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    @model IEnumerable<SelectionCommittee.Entities.Models.Faculty>
+    @*@model IEnumerable<SelectionCommittee.Entities.Models.Faculty>*@
 </head>
 <body>
         <!--Navbar-->
