--- a/SelectionCommittee/SelectionCommittee.Web/Views/Faculty/Index.cshtml
+++ b/SelectionCommittee/SelectionCommittee.Web/Views/Faculty/Index.cshtml
@@ -3,68 +3,53 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!-- Faculties -->
-@model IEnumerable<SelectionCommittee.Web.Models.FacultyViewModel>
+<ul class="nav nav-tabs" role="tablist">
+    <li class="nav-item">
+        <a class="nav-link active"
+           id="home-tab"
+           data-toggle="tab"
+           href="#home"
+           role="tab"
+           aria-controls="home"
+           aria-selected="True">View All</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link"
+           id="add-tab"
+           data-toggle="tab"
+           href="#add"
+           role="tab"
+           aria-controls="add"
+           aria-selected="false">Add New</a>
+    </li>
+</ul>
 
-@*<div class="row">
-        <div class="col-md-2 border">
-            Image
-        </div>
-        <div class="col-md-2 border">
-            @Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
-        </div>
-        <div class="col-md-2 border">
-            @Html.ActionLink("Budget Places", "Index", new { sortOrder = ViewBag.BudgetPlacesSortParm, currentFilter = ViewBag.CurrentFilter })
-        </div>
-        <div class="col-md-1 border">
-            @Html.ActionLink("Total places", "Index", new { sortOrder = ViewBag.TotalPlacesSortParm, currentFilter = ViewBag.CurrentFilter })
-        </div>
-        <div class="col-md-5 border">About</div>
-    </div>*@
+<div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        @Html.Action("ViewAll")
+    </div>
+    <div class="tab-pane fade" id="add" role="tabpanel" aria-labelledby="profile-tab">
+        @Html.Action("Add")
+    </div>
+</div>
 
-<!-- Generated Content -->
-<!-- item -->
-@*@foreach (var faculty in Model)
-    {
-        <div class="row">
-            <div class="col-md-2 border">
-                <img src="../../Content/Images/faculty.jpg" class="img-fluid" />
-            </div>
-            <div class="col-md-2 border">
-                @faculty.Name
-            </div>
-            <div class="col-md-2 border">
-                @faculty.BudgetPlacesAmount
-            </div>
-            <div class="col-md-1 border">
-                @faculty.TotalPlacesAmount
-            </div>
-            <div class="col-md-5 border">
+<link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet" />
+@section scripts{
+    @Scripts.Render("~/bundles/jqueryval")
 
-            </div>
-        </div>
-    }*@
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 
-<table>
-    <tr>
-        <th colspan="2">@Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })</th>
-        <th>@Html.ActionLink("Budget Places", "Index", new { sortOrder = ViewBag.BudgetPlacesSortParm, currentFilter = ViewBag.CurrentFilter })</th>
-        <th>@Html.ActionLink("Total Places", "Index", new { sortOrder = ViewBag.TotalPlacesSortParm, currentFilter = ViewBag.CurrentFilter })</th>
-    </tr>
-    @foreach (var faculty in Model)
-    {
-        <tr>
-            <td>@faculty.Name</td>
-            <td>Image here</td>
-            <td>@faculty.BudgetPlacesAmount</td>
-            <td>@faculty.TotalPlacesAmount</td>
-            <td>
-                @using (Html.BeginForm("Register", "Faculty", FormMethod.Get))
-                {
-                    <input type="hidden" name="facultyId" value="@faculty.Id" />
-                    <button name="Register" class="btn btn-light">Register</button>
-                }
-            </td>
-        </tr>
-    }
-</table>
+
+    <script>
+        function activatejQueryTable() {
+            $("#employeeTable").DataTable();
+        }
+
+        $(function () {
+            activatejQueryTable();
+        });
+
+    </script>
+}
+
+
