--- a/SelectionCommittee/SelectionCommittee.Web/Views/Faculty/Register.cshtml
+++ b/SelectionCommittee/SelectionCommittee.Web/Views/Faculty/Register.cshtml
@@ -1,3 +1,88 @@
-﻿@model SelectionCommittee.Web.Models.FacultyViewModel
+﻿@model SelectionCommittee.Web.Models.EnrollmentViewModel
 
-@Model.Name
+<h2>@ViewBag.Title.</h2>
+
+@using (Html.BeginForm("Register", "Faculty", FormMethod.Post, new { @class = "", role = "form" }))
+{
+    @Html.AntiForgeryToken()
+    <h4>Faculty enrollment.</h4>
+    <hr />
+    @Html.ValidationSummary("", new { @class = "text-danger" })
+    <div class="row">
+        <!-- Email, Password -->
+        <div class="col-md-6">
+            <!-- Email -->
+            <div class="form-group">
+                @Html.LabelFor(m => m.Email, new { @class = "col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                </div>
+            </div>
+            <!-- Password -->
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.Password, new { @class = "col-md-2" })*@
+                <div class="col-md-10">
+                    @*@Html.PasswordFor(m => m.Password, new { @class = "form-control" })*@
+                </div>
+            </div>
+            <!-- Confirm Password -->
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2" })*@
+                <div class="col-md-10">
+                    @*@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })*@
+                </div>
+            </div>
+        </div>
+        <!-- Full Name -->
+        <div class="col-md-6">
+            <!-- First Name -->
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.FirstName, new { @class = "col-md-2" })*@
+                <div class="col-md-10">
+                    @*@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })*@
+                </div>
+            </div>
+            <!-- Last Name -->
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.LastName, new { @class = "col-md-2" })*@
+                <div class="col-md-10">
+                    @*@Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })*@
+                </div>
+            </div>
+            <!-- Middle Name -->
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.MiddleName, new { @class = "col-md-2" })*@
+                <div class="col-md-10">
+                    @*@Html.TextBoxFor(m => m.MiddleName, new { @class = "form-control" })*@
+                </div>
+            </div>
+            <!-- Region -->
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.Region, new { @class = "col-md-2" })*@
+                <div class="col-md-10">
+                    @*@Html.TextBoxFor(m => m.Region, new { @class = "form-control" })*@
+                </div>
+            </div>
+            <!-- Town -->
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.Town, new { @class = "col-md-2" })*@
+                <div class="col-md-10">
+                    @*@Html.TextBoxFor(m => m.Town, new { @class = "form-control" })*@
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" class="btn bg-secondary" value="Register" />
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
